# Language-Models-for-Structured-Data-Analysis

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  GITHUB_READY.md  IMPROVEMENTS_SUMMARY.md  LICENSE  ML_Model_Training_Pipeline.ipynb  Makefile  PROJECT_STRUCTURE.md  README.md  RUN_GUIDE.md  frontend_demo.html  frontend_integration.py  launch_frontend.py  missing_deps.txt  pyproject.toml  requirements-dev.txt  requirements.txt  run_metrics.py
.github/workflows/: ci.yml
.kiro/specs/ml-model-performance-demo/: design.md  requirements.md  tasks.md
app/: __init__.py  charts.py  inference.py  insights.py  metrics.py  sql_executor.py
configs/: model_config.yaml  ui_config.yaml
demo_results/: demo_results.json
docker/: Dockerfile.app  docker-compose.yml
docs/adrs/: 001-prompting-strategies.md
eval/: metrics.py
models/: README.md  __init__.py
models/evaluation/: __init__.py  comparator.py  metrics_calculator.py  visualizer.py
models/techniques/: __init__.py  prompting_strategies.py  rag_pipeline.py
models/training/: __init__.py  sft_trainer.py
models/utils/: __init__.py  config_manager.py  data_processor.py  environment_report.json  environment_setup.py  validate_environment.py
notebooks/: Comprehensive_NL2SQL_Training_Pipeline.ipynb  demo_inference.ipynb  demo_metrics.ipynb
prompts/: strategies.py
prompts/templates/: chain_of_thought.yaml  few_shot.yaml  least_to_most.yaml  self_consistency.yaml  zero_shot.yaml
rag/: pipeline.py
scripts/: README.md  build_indices.py  prepare_dataset.py  train_all_techniques.py
src/: __init__.py
src/api/: main.py
src/database/: connection.py
src/models/: nl2sql.py
src/schema/: manager.py
tests/: __init__.py  test_inference.py  test_metrics.py  test_schema_manager.py  test_sql_executor.py
training/: train_sft.py
ui/: app.py  gradio_app.py
