[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nl2sql-assistant"
version = "0.1.0"
description = "NL-to-SQL Assistant with Prompting, RAG, and Fine-Tuning"
authors = [
    {name = "Kushal Adhyaru", email = "kushal@example.com"},
    {name = "Prem Shah", email = "prem@example.com"},
    {name = "Mayuka Kothuru", email = "mayuka@example.com"},
    {name = "Sri Gopi Sarath Gode", email = "sarath@example.com"},
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/your-org/nl2sql-assistant"
Repository = "https://github.com/your-org/nl2sql-assistant"
Issues = "https://github.com/your-org/nl2sql-assistant/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "transformers.*",
    "torch.*",
    "datasets.*",
    "faiss.*",
    "chromadb.*",
    "sentence_transformers.*",
]
ignore_missing_imports = true